--- a/exploreSD/public/index.html
+++ b/exploreSD/public/index.html
@@ -249,32 +249,32 @@
         <div class="filter row panel panel-default" id="left_filter">
           <div class = "col-sm-2 md">
             <label><input type="checkbox" name="Attractions" checked>Attractions -</label>
-            <img src="/images/attractions.png" class="thumbnail">
+            <img src="/images/attractions.png" class="thumbnail legend">
           </div>
           <div class = "col-sm-2">
             <label><input type="checkbox" name="Beaches" checked>Beaches -</label>
-            <img src="/images/beaches.png" class="thumbnail">
+            <img src="/images/beaches.png" class="thumbnail legend">
           </div>
           <div class = "col-sm-3">
            <label><input type="checkbox" name="College Campuses" checked>College Campuses -</label>
-           <img src="/images/colleges.png" class="thumbnail">
+           <img src="/images/colleges.png" class="thumbnail legend">
           </div>
           <div class = "col-sm-3">
             <label><input type="checkbox" name="Historical Buildings" checked>Historical Buildings -</label>
-            <img src="/images/buildings.png" class="thumbnail">
+            <img src="/images/buildings.png" class="thumbnail legend">
           </div>
         <div class="row row_2">
           <div class = "col-sm-2 md">
             <label><input type="checkbox" name="Landmarks" checked>Landmarks -</label>
-            <img src="/images/landmarks.png" class="thumbnail">
+            <img src="/images/landmarks.png" class="thumbnail legend">
           </div>
           <div class = "col-sm-2">
             <label><input type="checkbox" name="Museums" checked>Museums -</label>
-            <img src="/images/musums.png" class="thumbnail">
+            <img src="/images/musums.png" class="thumbnail legend">
           </div>
           <div class = "col-sm-2">
             <label><input type="checkbox" name="Parks" checked>Parks -</label>
-            <img src="/images/parks.png" class="thumbnail">
+            <img src="/images/parks.png" class="thumbnail legend">
           </div>
         </div>
       </div>
