Added show/hide routing button that shows/hides routing section, made routing container width responsive

--- a/exploreSD/public/index.html
+++ b/exploreSD/public/index.html
@@ -171,7 +171,7 @@
         <div class="col-sm-4">
           <!-- button locations subject to change -->
           <!-- <input type="button" value="Current Location" onclick="getLocationLeaflet()"> -->
-          <button type="submit" class="" id="" onclick="">Current Location</button>
+          <button type="submit" class="" id="" onclick="getLocationLeaflet()">Current Location</button>
         </div>
         <div class="col-sm-4">
           <div class="randomsearch">
@@ -179,7 +179,7 @@
           </div>
         </div>
         <div class="col-sm-4">
-          <button type="submit" class="" id="" onclick="">Routing</button>
+          <button type="submit" class="" id="routing-button" onclick="showHideRouting();">Show Routing</button>
         </div>
       </div>
       <br>
