--- a/exploreSD/public/index.html
+++ b/exploreSD/public/index.html
@@ -186,6 +186,11 @@
         </div>
       </div>
       <br>
+      <!-- <div class="text-center">
+        Hovering over places on the map shows the name &amp; details. When you click on a place, you can
+        set it as a start location or destination. There's a details button too.
+      </div> -->
+
       <!-- seach bar -->
       <div class="search-bar">
         <input type="text" id="search-criteria" placeholder="Search for places..">
