--- a/exploreSD/public/index.html
+++ b/exploreSD/public/index.html
@@ -84,6 +84,9 @@
           <h1>Welcome to Explore SD</h1>
           <h3>Let's go on an adventure</h3>
         </div>
+        <div class="img-overlay get-started">
+          <a href="#facts" class="btn btn-primary btn-lg round" role="button">Get Started</a>
+        </div>
       </div>
     </div>
   </div>
