Fixed save feature bug

--- a/exploreSD/public/index.html
+++ b/exploreSD/public/index.html
@@ -319,7 +319,7 @@
               <br>
             </div>
             <div class="modal-footer">
-              <button type="button" id="modal-save" class="btn btn-default"  data-dismiss="modal">Save</button>
+              <!-- <button type="button" id="modal-save" class="btn btn-default"  data-dismiss="modal">Save</button> -->
             </div>
           </div>
 
