itinerary buttons UI

--- a/exploreSD/public/index.html
+++ b/exploreSD/public/index.html
@@ -51,6 +51,7 @@
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
  </script>
+ <header>
     <!-- Navigation Bar -->
     <nav class="navbar navbar-inverse navbar-default navbar-fixed-top">
       <div class="container-fluid">
@@ -92,7 +93,7 @@
       </div>
     </div>
   </div>
-
+</header>
   <!-- fun facts page -->
   <div id="facts">
     <div class="container-fluid">
