--- a/exploreSD/public/index.html
+++ b/exploreSD/public/index.html
@@ -87,7 +87,7 @@
           <h3>Let's go on an adventure</h3>
         </div>
         <div class="img-overlay get-started">
-          <a href="#facts" class="get-started btn btn-success btn-lg btn-rounded
+          <a href="#facts" class="get-started btn btn-primary btn-lg btn-rounded
           " role="button">Get Started</a>
         </div>
       </div>
