Commented styleUI.css temporarily

--- a/exploreSD/public/index.html
+++ b/exploreSD/public/index.html
@@ -193,7 +193,7 @@
 
       <!-- seach bar -->
       <div class="search-bar">
-        <input type="text" id="search-criteria" class = "searchbar" placeholder="Search for places or categories..">
+        <input type="text" id="search-criteria" class = "searchbar" placeholder="Search places">
         <!-- onkeyup="search()" -->
         <input type="button" id="search" class= "searchbtn" value="search" onclick="search(72)">
       </div>
